# SDL2-playground

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  input.cpp  input.h  main.cpp  main.h
